--- a/css/style6.css
+++ b/css/style6.css
@@ -1,92 +1,13 @@
-body{
-  background: $baseColor;
-  text-align: center;
-  font-family: 'Comfortaa', cursive;
-}
-svg{
-  width: 100px;
-  height: 100px;
-  margin: 20px;
-  display:inline-block;
-}
-h1{
-  text-align: center;
-  color: $fontColor;
-  margin: 0 0 100px;
-  font-size: 34px;
-  font-weight: 100;
-  text-transform: uppercase;
-  background-color: darken($baseColor, 5);
-  padding: 20px 0;
-  b{
-    font-weight: 700;
+body {
+    margin: 0;
+    height: 100%;
+    overflow: hidden;
+    background: rgb(108, 114, 116);
+    color: rgb(0, 0, 0);
   }
-}
 
-.made-with-love{
-  margin-top: 20px;
-  padding: 10px;
-  font-size: 10px;
-  font-family: arial;
-  color: #fff;
-  i{
-    font-style: normal;
-    color: #F50057;
-    font-size: 14px;
-    position: relative;
-    top: 2px;
-  }
-  a{
-    color: #fff;
-    text-decoration: none;
-    &:hover{
-      text-decoration: underline;
-    }
-  }
-}
-
-.loader {
-	max-width: 15rem;
-	width: 100%;
-	height: auto;
-	stroke-linecap: round;
-}
-
-circle {
-	fill: none;
-	stroke-width: 3.5;
-	animation-name: preloader;
-	animation-duration: 3s;
-	animation-iteration-count: infinite;
-	animation-timing-function: ease-in-out;
-	transform-origin: 170px 170px;
-	will-change: transform;
-
-	&:nth-of-type(1) {
-		stroke-dasharray: 550px;
-	}
-
-	&:nth-of-type(2) {
-		stroke-dasharray: 500px;
-	}
-
-	&:nth-of-type(3) {
-		stroke-dasharray: 450px;
-	}
-
-	&:nth-of-type(4) {
-		stroke-dasharray: 300px;
-	}
-
-	@for $i from 1 through 4 {
-		&:nth-of-type(#{$i}) {
-			animation-delay: -#{$i * 0.15}s;
-		}
-	}
-}
-
-@keyframes preloader {
-	50% {
-		transform: rotate(360deg);
-	}
+svg {
+  border: 3px solid #eee;
+  display: block;
+  margin: 1em auto;
 }
